<resources>
    <string name="app_name">My First App</string>
    <string name="button_send">Login</string>
    <string name="button_register">Register</string>
    <string name="enter_password">Password</string>
    <string name="enter_email">Email Address</string>
    <string name="home">Home</string>
    <string name="password2">Password</string>
    <string name="email2">Email Address</string>
    <string name="login">AAP Diagnosis</string>
    <string name="register">Register</string>
    <string name="forgotten_password">Forgotten Password?</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an Account? Register here</string>
    <string name="logo_image">Logo image</string>
    <string name="emailView">emailView</string>
    <string name="passwordView">passwordView</string>
    <string name="features">Features</string>
    <string name="email3">Email Address</string>
    <string name="password3">Password</string>
    <string name="registerPage">registerPage</string>
    <string name="have_an_account">Already have an Account? Login here</string>
    <string name="skin_scanner">Welcome to SkinScanner</string>
    <string name="aap_test">Welcome to your AAP diagnosis testing tool</string>
    <string name="dip_scan">Welcome to DipScan</string>
    <string name="num_scan">Welcome to NumScan</string>
    <string name="skin_scanner_info">Unsure about a mark on your skin? Take a picture, upload it to the app and we will use our process the image to see if it may be harmful.</string>
    <string name="aap_test_info">Diagnose your acute abdominal pain by answering a simple list of questions.</string>
    <string name="dip_scan_info"></string>
    <string name="num_scan_info"></string>
    <string name="age_input">Age</string>
    <string name="name_input">Name</string>
    <string name="records">Records</string>
    <string name="process_image">Process Image</string>
    <string name="confirm_text">Would you like to use this image?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="processing">Processing your Image</string>
    <string name="please_wait">Please Wait</string>
    <string name="record">Record</string>
    <string name="date">Date</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="clear_record">Clear Record</string>
    <string name="your_result">Your Result </string>
    <string name="no_issue">There doesn\'t look to be a problem!</string>
    <string name="issue">There looks to be an issue!</string>
    <string name="good">Good</string>
    <string name="bad">Bad</string>
    <string name="low_risk">Low Risk</string>
    <string name="high_risk">High Risk</string>
    <string name="what_does_this_mean">What does this mean?</string>
    <string name="low_risk_info">SkinScanner\'s algorithm has identified your image as low risk.
    This is because there isn\'t a strong match between your image and images in our database.</string>
    <string name="low_risk_info2">This is NOT a diagnosis, if you are unsure please seek
    a medical professional who can provide a more informed diagnosis</string>
    <string name="high_risk_info">SkinScanner\'s algorithm has identified your image as high risk.
    This is because there is a strong match between your image and images in our database.</string>
    <string name="high_risk_info2">This is NOT a diagnosis, we advise that you seek a medical professional\'s opinion based on the algorithms results.</string>
    <string name="another_diagnosis">To use another image click here</string>
    <string name="please_answer">Please answer the questions below</string>
    <string name="aap_progress">27/33</string>
    <string name="next_questions">Click here to see the next question</string>
    <string name="aggravating_factors">Do you have any aggravating factors?</string>
    <string name="aap_progress1">28/33</string>
    <string name="reset_password_info">To reset your password we just need your email address</string>
    <string name="reset_your_password">Reset Password</string>
    <string name="check_email">Check your email</string>
    <string name="insert_code">Insert the code you received in the email we sent to you.</string>
    <string name="code">Code</string>
    <string name="send_code">Send Code</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="create_new_password">Type in your new password below, and then type it a second time.</string>
    <string name="completed">Completed successfully</string>
    <string name="submit">Submit</string>
    <string name="aap_diagnosis">AAP Diagnosis</string>
    <string name="question1">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="question2">Age</string>
    <string name="ltTen">&lt;10</string>
    <string name="tens">10s</string>
    <string name="twenties">20s</string>
    <string name="thirties">30s</string>
    <string name="forties">40s</string>
    <string name="fifties">50s</string>
    <string name="sixties">60s</string>
    <string name="seventyPlus">70+</string>
    <string name="question3">Site of pain at onset</string>
    <string name="painRUQ">Right upper quadrant</string>
    <string name="painLUQ">Left upper quadrant</string>
    <string name="painRLQ">Right lower quadrant</string>
    <string name="painLLQ">Left lower quadrant</string>
    <string name="painUH">Upper half</string>
    <string name="painLH">Lower half</string>
    <string name="painRS">Right side</string>
    <string name="painLS">Left side</string>
    <string name="painC">Central</string>
    <string name="painG">General</string>
    <string name="painRL">Right loin</string>
    <string name="painLL">Left loin</string>
    <string name="painNP">No pain</string>
    <string name="question4">Site of pain at present</string>
    <string name="question5">Aggravating factors</string>
    <string name="movement">Movement</string>
    <string name="coughing">Coughing</string>
    <string name="respiration">Respiration</string>
    <string name="food">Food</string>
    <string name="other">Other</string>
    <string name="none">None</string>
    <string name="question6">Relieving factors</string>
    <string name="lyingStill">Lying still</string>
    <string name="vomiting">Vomiting</string>
    <string name="antacids">Antacids</string>
    <string name="question7">Progress</string>
    <string name="better">Better</string>
    <string name="same">Same</string>
    <string name="worse">Worse</string>
    <string name="question8">Duration</string>
    <string name="hours12">12 hours</string>
    <string name="hours12To23">12–23 hours</string>
    <string name="hours24To48">24–48 hours</string>
    <string name="days2to7">2–7 days</string>
    <string name="question9">Type</string>
    <string name="intermittent">Intermittent</string>
    <string name="steady">Steady</string>
    <string name="colicky">Colicky</string>
    <string name="question10">Severity</string>
    <string name="moderate">Moderate</string>
    <string name="severe">Severe</string>
    <string name="question11">Nausea</string>
    <string name="question12">Vomiting</string>
    <string name="question13">Anorexia</string>
    <string name="question14">Previous indigestion</string>
    <string name="question15">Jaundice</string>
    <string name="question16">Bowels</string>
    <string name="normal">Normal</string>
    <string name="constipation">Constipation</string>
    <string name="diarrhoea">Diarrhoea</string>
    <string name="blood">Blood</string>
    <string name="mucus">Mucus</string>
    <string name="question17">Micturition</string>
    <string name="frequency">Frequency</string>
    <string name="dysuria">Dysuria</string>
    <string name="dark">Dark</string>
    <string name="haematuria">Haematuria</string>
    <string name="question18">Previous similar pain</string>
    <string name="question19">Previous abdo surgery</string>
    <string name="question20">Previous abdo pain</string>
    <string name="question21">Mood</string>
    <string name="distressed">Distressed</string>
    <string name="anxious">Anxious</string>
    <string name="question22">Colour</string>
    <string name="pale">Pale</string>
    <string name="flushed">Flushed</string>
    <string name="jaundiced">Jaundiced</string>
    <string name="cyanosed">Cyanosed</string>
    <string name="question23">Abdo movement</string>
    <string name="poor">Poor</string>
    <string name="peristalsis">Peristalsis</string>
    <string name="question24">Scar</string>
    <string name="question25">Distension</string>
    <string name="question26">Site of tenderness</string>
    <string name="question27">Rebound</string>
    <string name="question28">Guarding</string>
    <string name="question29">Rigidity</string>
    <string name="question30">Mass</string>
    <string name="question31">Murphy</string>
    <string name="positive">Positive</string>
    <string name="negative">Negative</string>
    <string name="question32">Bowel</string>
    <string name="decreased">Decreased</string>
    <string name="hyper">Hyper</string>
    <string name="question33">Rectal tenderness</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="general">General</string>
    <string name="mass">Mass</string>
    <string name="question34">Periods</string>
    <string name="notStarted">Not started</string>
    <string name="regular">Regular</string>
    <string name="irregular">Irregular</string>
    <string name="question35">Last monthly period</string>
    <string name="lateOverdue">Late/overdue</string>
    <string name="question36">Vaginal discharge</string>
    <string name="question37">Pregnancy</string>
    <string name="impossible">Impossible</string>
    <string name="possible">Possible</string>
    <string name="confirmed">Confirmed</string>
    <string name="question38">Faint/dizzy</string>
    <string name="question39">Previous history of salpingitis/std</string>
    <string name="question40">Vaginal tenderness</string>
    <string name="cervix">Cervix</string>
    <string name="bloodClots">Blood (clots)</string>
    <string name="logout">Logout</string>
    <string name="new_diagnosis">New Diagnosis</string>
</resources>